# MyFOCLib

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  foc.c  foc.h  myTypes.h
docs/: AI_REFACTOR_SPEC.md  API_REFERENCE.md  PROJECT_STRUCTURE.md  USAGE.md  api_reference.md  architecture.md
examples/: bldc_foc_demo.c
include/: BLDCMotor.h  MagneticSensor.h  delay.h  foc.h  my_filter.h  pid.h
scripts/: install.sh
src/: BLDCMotor.c  BLDCMotor.h  MagneticSensor.c  MagneticSensor.h  delay.c  delay.h  foc.c  my_filter.c  my_filter.h  pid.c  pid.h
tests/: smoke_test.c  unit_test_foc.c
